--- a/docs/hardware/ina228.md
+++ b/docs/hardware/ina228.md
@@ -12,7 +12,7 @@ This circuit implements a battery monitoring system using the Texas Instruments 
 - **Communication**: I2C interface at 7-bit address 0x40
 - **Supply Voltage**: 3.3V logic supply
 
-## Detailed Connection Descriptions
+## Connection Descriptions
 
 ### Power and Signal Connections
 
