Add all documentation files

--- a/docs/hardware/ina228.md
+++ b/docs/hardware/ina228.md
@@ -25,11 +25,9 @@ This circuit implements a battery monitoring system using the Texas Instruments 
 #### Current Shunt Interface
 - **IN+_INA228**: High side of low-side shunt resistor
   - Connected through R72 (100Ω) to INA228 pin 10 (IN+)
-  - Low-pass filtered by R72 and C29 (1µF, 100V)
   
 - **IN-_INA228**: Low side of shunt resistor (battery ground/negative)
   - Connected through R73 (100Ω) to INA228 pin 9 (IN-)
-  - Low-pass filtered by R73 and C41 (1µF, 100V)
 
 #### INA228 IC (U20) Pin Configuration
 | Pin | Function | Connection |
@@ -69,26 +67,34 @@ This circuit implements a battery monitoring system using the Texas Instruments 
 
 ### Noise Filtering
 
-#### RC Low-Pass Filters
-All three measurement inputs feature identical RC low-pass filtering:
+#### Input Series Resistance
+Both differential measurement inputs feature matched 100Ω series resistors:
 
+- **IN+ Series Resistance**: R72 (100Ω, 0.1% tolerance for matching)
+- **IN- Series Resistance**: R73 (100Ω, 0.1% tolerance for matching)
+
+These resistors provide:
+- **Input protection** against transients
+- **Symmetric impedance** for optimal common-mode rejection
+- **EMI filtering** when combined with differential capacitance
+
+#### VBUS Filtering
 - **VBUS Filter**: R79 (100Ω) + C8 (1µF)
-- **IN+ Filter**: R72 (100Ω) + C29 (1µF)  
-- **IN- Filter**: R73 (100Ω) + C41 (1µF)
-
-**Cutoff Frequency Calculation:**
-```
-fc = 1 / (2π × R × C)
-fc = 1 / (2π × 100Ω × 1µF)
-fc ≈ 1.59 kHz
-```
-
-All filters can be bypassed with Jumpers, though in some future iteration we may want to change where the jumpers are located to keep some level of protection.
+- **Cutoff Frequency**: fc ≈ 1.59 kHz
 
 #### Differential Noise Reduction
 - **C25**: 100nF, 100V capacitor connected directly between IN+ and IN-
-- Reduces common-mode noise on differential measurement
-- Higher frequency filtering compared to individual RC filters
+- Provides high-frequency noise filtering for differential measurement
+- **Critical Design Note**: No capacitors are connected from IN+ or IN- to ground, which prevents common-mode to differential-mode noise conversion through asymmetric coupling
+
+**Differential Filter Characteristics:**
+```
+fc = 1 / (2π × R × C)
+fc = 1 / (2π × 100Ω × 100nF)
+fc ≈ 15.9 kHz
+```
+
+All filters can be bypassed with jumpers for testing or different filtering requirements.
 
 ## Electrical Specifications
 
@@ -157,12 +163,10 @@ P_standby = 3.3V × 2.8µA = 9.24µW
 - **Current Measurement Resolution**: Depends on shunt value and ADC configuration
 - **Voltage Measurement Resolution**: Programmable, typically 16-bit effective
 
-
 ### Filtering Performance
-- **Input Filter Bandwidth**: ~1.59kHz (-3dB point)
-- **Differential Noise Filtering**: Enhanced by 100nF direct coupling
-- **Common-mode Rejection**: Enhanced by matched RC filters on all inputs
-
+- **VBUS Filter Bandwidth**: ~1.59kHz (-3dB point)
+- **Differential Filter Bandwidth**: ~15.9kHz (-3dB point)
+- **Common-mode Rejection**: Enhanced by symmetric input impedance design
 
 ## I2C Interface Configuration
 
@@ -183,4 +187,6 @@ P_standby = 3.3V × 2.8µA = 9.24µW
 - ✅ INA228 VBUS rating (85V) > max battery voltage (59V)
 - ✅ Differential signal range within INA228 limits
 - ✅ ESD protection appropriate for expected signal levels
-- ✅ Filter cutoff frequency suitable for battery monitoring application
+- ✅ Filter cutoff frequencies suitable for battery monitoring application
+- ✅ Symmetric input impedance for optimal common-mode rejection
+- ✅ No ground-referenced capacitors on differential inputs to prevent CM→DM conversion
